# mimxrt685s-pac

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  device.x
.github/workflows/: check.yml  nostd.yml
patch/: MIMXRT685S_cm33.yaml  adc.yaml  crc.yaml  dma.yaml  i2s.yaml  inputmux.yaml  sct.yaml  usart.yaml
src/: _vectors.rs  adc0.rs  ahb_secure_ctrl.rs  cache64.rs  cache64_polsel.rs  casper.rs  clkctl0.rs  clkctl1.rs  cmp.rs  crc_engine.rs  ctimer0.rs  dma0.rs  dmic0.rs  flexcomm0.rs  flexspi.rs  freqme.rs  generic.rs  gpio.rs  hashcrypt.rs  i2c0.rs  i2s0.rs  i3c.rs  inputmux.rs  iopctl.rs  lib.rs  mpu.rs  mrt0.rs  mua.rs  nvic.rs  ocotp.rs  ostimer0.rs  otfad.rs  pint.rs  pmc.rs  powerquad.rs  puf.rs  rstctl1.rs  rtc.rs  sau.rs  scb.rs  (+15 more)
src/adc0/: cfg.rs  cmdh.rs  cmdh1.rs  cmdh10.rs  cmdh11.rs  cmdh12.rs  cmdh13.rs  cmdh14.rs  cmdh15.rs  cmdh2.rs  cmdh3.rs  cmdh4.rs  cmdh5.rs  cmdh6.rs  cmdh7.rs  cmdh8.rs  cmdh9.rs  cmdl.rs  cmdl1.rs  cmdl10.rs  cmdl11.rs  cmdl12.rs  cmdl13.rs  cmdl14.rs  cmdl15.rs  cmdl2.rs  cmdl3.rs  cmdl4.rs  cmdl5.rs  cmdl6.rs  cmdl7.rs  cmdl8.rs  cmdl9.rs  ctrl.rs  cv.rs  de.rs  fctrl.rs  ie.rs  param.rs  pause.rs  (+7 more)
src/ahb_secure_ctrl/: ahb_periph0_slave_rule0.rs  ahb_periph1_slave_rule0.rs  ahb_periph2_slave_rule0.rs  ahb_periph3_slave_rule0.rs  aips_bridge0_mem_rule0.rs  aips_bridge1_mem_rule0.rs  aips_bridge1_mem_rule1.rs  apb_grp0_mem_rule0.rs  apb_grp0_mem_rule1.rs  apb_grp1_mem_rule0.rs  apb_grp1_mem_rule1.rs  apb_grp1_mem_rule2.rs  cm33_lock_reg.rs  flexspi0_region0_rule.rs  flexspi0_region1_rule0.rs  (+55 more)
(+1350 files in other folders)
