[package]
name = "mimxrt685s-pac"
version = "0.1.0"
authors = [ "Felipe Balbi <felipe@balbi.sh>" ]
edition = "2021"
license-file = "LICENSE"
description = "Peripheral Access Crate for MIMXRT685s devices"
repository = "https://github.com/felipebalbi/mimxrt685s-pac"
readme = "README.md"
keywords = [ "rt6", "mimxrt", "mimxrt6", "no_std", "embedded" ]
categories = [ "embedded", "no-std" ]
rust-version = "1.79"
exclude = [ "svd/*", ]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true }
critical-section = { version = "1.1.2", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]
